fetch buses or busbarsections for a given voltage level switch its topology kind (#215)
Signed-off-by: maissa SOUISSI <maissa.souissi@rte-france.com>